--- a/micro-infra-hystrix/build.gradle
+++ b/micro-infra-hystrix/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(':micro-infra-spring-base')
     compile "org.codehaus.groovy:groovy-all"
     compile 'com.netflix.hystrix:hystrix-core:1.4.0-RC5'
+    compile 'com.netflix.hystrix:hystrix-metrics-event-stream:1.1.2'
 
     testCompile "org.spockframework:spock-core"
     testRuntime "org.spockframework:spock-spring"
